[gd_scene load_steps=22 format=2]

[ext_resource path="res://Art/TempBG.png" type="Texture" id=1]
[ext_resource path="res://Art/AlienAnimation-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Art/Alien Project Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://src/Scenes/Levels/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Art/Logo.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Symtext.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/Scenes/WinScreen/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/ButtonStyleNormal.tres" type="StyleBox" id=8]
[ext_resource path="res://Fonts/ButtonStylePressed.tres" type="StyleBox" id=9]
[ext_resource path="res://src/Scenes/InfoScreens/HowToPlayScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Scenes/InfoScreens/StoryScene.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 6 )

[node name="MainMenu" type="Node"]
script = ExtResource( 4 )
scene = "TestLevel"

[node name="BG" type="Node2D" parent="."]

[node name="Sprite" type="TextureRect" parent="BG"]
margin_right = 540.0
margin_bottom = 360.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="Sprite" parent="BG"]
position = Vector2( 109.791, 104.451 )
scale = Vector2( 5.90136, 5.90136 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 32, 32, 32 )

[node name="SpaceShip" type="AnimatedSprite" parent="BG"]
position = Vector2( 364.745, 188.546 )
scale = Vector2( 2.60598, 2.60598 )
frames = SubResource( 7 )
frame = 5
playing = true
flip_h = true

[node name="Asteroid" type="Sprite" parent="BG"]
position = Vector2( 4.53827, 57.3095 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 22.4492
margin_top = 224.492
margin_right = 200.494
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 178.0
margin_bottom = 24.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 8 )
text = "Play Game"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 178.0
margin_bottom = 63.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "How to Play"

[node name="StoryButton" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 178.0
margin_bottom = 102.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 10 )
text = "Story"

[node name="WinLoseScreen" parent="." instance=ExtResource( 7 )]

[node name="ChangeSceneTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="HowToPlayScreen" parent="." instance=ExtResource( 10 )]

[node name="StoryScene" parent="." instance=ExtResource( 11 )]

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StoryButton" to="." method="_on_StoryButton_pressed"]
[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_ChangeSceneTimer_timeout"]
[connection signal="mainMenuPressed" from="HowToPlayScreen" to="." method="_on_HowToPlayScreen_mainMenuPressed"]
[connection signal="mainMenuPressed" from="StoryScene" to="." method="_on_StoryScene_mainMenuPressed"]
